# File-Translation-STT-Service

./: .dockerignore  .env.example  .gitignore  DEPLOY_UBUNTU_2404.md  Dockerfile  README.md  check_db.py  create_emp_table.sql  docker-compose.yml  index.html  nginx.conf  server-fullchain.crt  serverv.key
.cursor/rules/: AI-System-Project-Rule.mdc
.github/: copilot-instructions.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/services/: employee_db.py  gpu_live_monitor.py  llm_service.py  meeting_minutes_docx.py  pdf_layout_detector.py  pdf_layout_detector_yolo.py  pdf_layout_service.py  pdf_service.py  rank_service.py  stt_service.py  transcript_docx_service.py
backend/app/services/factory/: db_config.py  doc_redis.py  equipment_sql_agent.py  factory_agent.py  factory_redis.py  rag_agent.py  router_agent.py  sql_agent.py  sql_pg_queries.py  sql_tools.py
frontend/: .env.production.example  README.md  ecosystem.config.js  index.html  next.config.ts  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/Chat/: InputArea.jsx  MessageItem.jsx  MessageList.jsx
frontend/src/components/dashboard/: chart-block.tsx  dashboard-home.tsx  doc-qa-interface.tsx  document-translation.tsx  km-hub.tsx  login-page.tsx  (+5 more)
frontend/src/context/: translation-context.tsx  user-context.tsx  voice-context.tsx
frontend/src/lib/: pdf-storage.ts
samples/GPT-OSS-20B/: 摘要-small.docx  摘要-tiny.docx  逐字稿-small.docx  逐字稿-tiny.docx
samples/Qwen3-latest-7B/: 摘要-small.docx  摘要-tiny.docx  逐字稿-small.docx  逐字稿-tiny.docx
(+11 files in other folders)
