[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.66.0",
    "fastapi>=0.128.0",
    "faster-whisper>=1.0.0",
    "ollama>=0.6.1",
    "opencc-python-reimplemented>=0.1.7",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]
