[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.0.0",
    "ollama>=0.6.1",
    "opencc-python-reimplemented>=0.1.7",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pillow>=10.2.0",
    "requests>=2.31.0",
    "soundfile>=0.13.1",
    "uvicorn>=0.40.0",
    "python-docx>=1.0.0",
    "opencv-python-headless>=4.8.0",
    "httpx>=0.27.0",
    "layoutparser>=0.3.4",
]

